--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Social-Login</title>
 </head>
 <body>
     <h1><i>Wanderlust Vacations</i></h1>
-    <p></p>
+    <p><b><i>Escape the routine and embrace the joy of travel with a perfect vacation. Whether it's relaxing on a beach, exploring a new city, or enjoying nature, vacations offer the ideal break to recharge, connect, and create unforgettable memories. Discover the true meaning of relaxation and adventure—your next getaway starts here.</i></b></p>
     <form action="#" method="post">
-          
+      <h3><i>Login</i></h3>  
+      <input type="email" name="email" id="email" placeholder=" Email"><br><br><br>
+      <input type="password" name="password" id="password" placeholder=" Password">
     </form>
 </body>
 </html>
