--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       <h3><i>Login</i></h3>  
       <input type="email" name="email" id="email" placeholder=" Email"><br><br><br>
       <input type="password" name="password" id="password" placeholder=" Password">
+      <div><input type="checkbox" name="rem" id="rem">
+      <label><b>Remember Me</b></label></div>
+      <a href="#" class="forgot"><b>Forgot Password?</b></a>
+      <a href="#"><button><i>Submit</i></button></a>
     </form>
 </body>
 </html>
