--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <div><input type="checkbox" name="rem" id="rem">
       <label><b>Remember Me</b></label></div>
       <a href="#" class="forgot"><b>Forgot Password?</b></a>
-      <a href="#"><button><i>Submit</i></button></a>
+      <a href="#"><button><i>Submit</i></button></a><br>
+      <label class="reg">Don't have an account? <a href="#" class="register">Register Now</a></label>
     </form>
 </body>
 </html>
